# mrmosaic

./: .gitignore  .travis.yml  Makefile  Makefile.am  Makefile.in  config.h  config.h.in  configure  configure.ac
samtools-1.3/: config.h.in
samtools-1.3/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
scripts/: Makefile  Makefile.am  Makefile.in  plot_denovos.R  run_mrmosaic.R.in
src/: Makefile  Makefile.am  Makefile.in  cnv_baf_data.c
