#                                               -*- Autoconf -*-
# Process this file with autoconf to produce a configure script.

AC_PREREQ([2.69])
AC_INIT([mrmosaic], [0.1], [mail@example.com])
AC_CONFIG_SRCDIR([src/cnv_baf_data.c])

AC_CONFIG_FILES([Makefile
                 scripts/Makefile
                 src/Makefile])
AC_CONFIG_HEADERS([config.h])

# Checks for programs.
AC_PROG_CC

# Checks for libraries.

# Checks for header files.
AC_CHECK_HEADERS([stdlib.h string.h unistd.h])

# Checks for typedefs, structures, and compiler characteristics.
AC_TYPE_INT8_T

# Checks for library functions.

#AC_CONFIG_SUBDIRS([scripts])
AM_INIT_AUTOMAKE
AC_OUTPUT
