bin_SCRIPTS = plot_denovos.R  plot_mrm.R  run_mrmosaic.R
#do_subst = sed -e 's,[@]datadir[@],$(datadir),g' \
#            -e 's,[@]PERL[@],$(PERL),g' \
#            -e 's,[@]PACKAGE[@],$(PACKAGE),g' \
#            -e 's,[@]VERSION[@],$(VERSION),g'
#
#plot_denovos.R: plot_denovos.R.in Makefile
#	$(do_subst) < $(srcdir)/plot_denovos.R.in > plot_denovos.R
#	chmod +x plot_denovos.R
#
#plot_mrm.R: plot_mrm.R.in Makefile
#	$(do_subst) < $(srcdir)/plot_mrm.R.in > plot_mrm.R
#	chmod +x plot_mrm.R
#
#run_mrmosaic.R: run_mrmosaic.R.in Makefile
#	$(do_subst) < $(srcdir)/run_mrmosaic.R.in > run_mrmosaic.R
#	chmod +x run_mrmosaic.R

